[project]
name = "dqmj1_randomizer"
version = "0.3.0"
dependencies = ["wxPython", "ndspy", "pandas", "pyinstaller"]

[project.optional-dependencies]
test = ["mypy==1.15", "ruff==0.11", "pandas-stubs"]

[tool.setuptools]
packages = ["dqmj1_randomizer"]

[options.package_data]
dqmj1_randomizer = "*.csv"

[project.scripts]
dqmj1_randomizer = "dqmj1_randomizer:main.main"

[tool.mypy]
strict = true
allow_subclassing_any = true
allow_untyped_defs = true
exclude = ["build"]

[tool.ruff.lint]
select = ["B", "I", "UP", "FURB", "RUF"]